# elm2nix

./: Dependency.hs  ElmJson.hs  Main.hs  README.md  Sandbox.hs  Spec.hs  Version.hs  elm-lock.sh  elm2nix.cabal  elm2nix.nix  flake.nix
app/: Main.hs
example/: .gitignore  README.md  flake.nix
example/review/: elm.json
example/src/: Main.elm  Workshop.elm
example/tests/: Example.elm
nix/: build-elm-application.nix  default.nix  dot-elm-links.nix  elm2nix.nix  fetch-elm-package.nix  generate-registry-dat.nix  prepare-elm-home-script.nix  symbolic-links-to-packages-script.nix
src/: Binary.hs  Elm2Nix.hs
src/Elm2Nix/: CLI.hs  Dependency.hs  ElmJson.hs  ElmLock.hs  Version.hs
src/Elm2Nix/Data/: Dependency.hs  ElmJson.hs  ElmLock.hs  FixedOutputDerivation.hs  Name.hs  RegistryDat.hs  Version.hs
src/Elm2Nix/Lib/: Binary.hs  Json.hs  Nix.hs
src/Elm2Nix/Lib/Json/: Decode.hs
test/: Spec.hs
test/Test/: Fixture.hs
test/Test/Elm2Nix/Data/: ElmJson.hs  ElmLock.hs  FixedOutputDerivation.hs  Name.hs  RegistryDat.hs  Version.hs
test/Test/Elm2Nix/Lib/: Binary.hs  Json.hs  Nix.hs
test/Test/Elm2Nix/Lib/Json/: Decode.hs
test/data/: elm1.json  elm2.json  elm3.json  name-missing-forward-slash.json  version-incorrect-format.json  version-leading-zeros.json
tests/: Spec.hs
tests/Test/Elm2Nix/: Dependency.hs  ElmJson.hs  Version.hs
tests/Test/Elm2Nix/Data/: Dependency.hs  ElmJson.hs  Name.hs  Version.hs
