cabal-version: 3.0
name: elm2nix
version: 0.1.0.0


library
    hs-source-dirs: src
    exposed-modules:
        Elm2Nix.Data.Dependency,
        Elm2Nix.Data.ElmJson,
        Elm2Nix.Data.FixedOutputDerivation,
        Elm2Nix.Data.Name,
        Elm2Nix.Data.Version,
        -- Elm2Nix.ElmLock,
        Elm2Nix.Lib.Json,
        Elm2Nix.Lib.Nix
        -- Binary

    ghc-options: -Wall -Wno-name-shadowing

    default-language: Haskell2010
    build-depends:
        aeson,
        aeson-pretty,
        base,
        binary,
        bytestring,
        containers,
        indexed-traversable,
        text,
        typed-process,
        unliftio


executable elm2nix
    hs-source-dirs: app
    main-is: Main.hs

    ghc-options: -Wall -Wno-name-shadowing

    default-language: Haskell2010
    build-depends:
        base,
        elm2nix


test-suite test
    type: exitcode-stdio-1.0

    hs-source-dirs: test
    main-is: Spec.hs
    other-modules:
        Test.Elm2Nix.Data.Dependency,
        Test.Elm2Nix.Data.ElmJson,
        Test.Elm2Nix.Data.Name,
        Test.Elm2Nix.Data.Version,
        Test.Elm2Nix.Lib.Json,
        Test.Elm2Nix.Lib.Nix,
        Test.Fixture

    ghc-options: -Wall -Wno-name-shadowing

    default-language: Haskell2010
    build-depends:
        aeson,
        base,
        bytestring,
        containers,
        elm2nix,
        hspec,
        text
